# covvvr

./: .gitignore  CITATION.cff  README.md  pyproject.toml
analysis/: README.md  latex.ipynb  misc.ipynb  plots.ipynb
analysis/data/: 2cv_16d_camel_50x5000_avg100.npz  2cv_16d_gaussian_50x5000_avg100.npz  2cv_18d_polynomial_50x5000_avg100.npz  2cv_2d_camel_50x5000_avg100.npz  2cv_2d_gaussian_50x5000_avg100.npz  2cv_4d_camel_50x5000_avg100.npz  2cv_4d_gaussian_50x5000_avg100.npz  2cv_54d_polynomial_50x5000_avg100.npz  2cv_8d_camel_50x5000_avg100.npz  2cv_8d_gaussian_50x5000_avg100.npz  2cv_96d_polynomial_50x5000_avg100.npz  2cv_annulus_with_cuts_50x5000_avg100.npz  2cv_entangled_circles_50x5000_avg100.npz  2cv_scalar_top_loop_50x5000_avg100.npz  AnnulusWCuts2_100x100_50x5000.pkl  NGauss2_100x100_50x5000.pkl  compare_50x5000_avg100.pkl  means_50x5000_avg1000.pkl
analysis/scripts/: calc_percdiff.py  constants.py  cv_compare.py  multirun.py  utils.py
src/congas/: __init__.py  _types.py  _wrappers.py  functions.py
src/control_vegas/: __init__.py  _exceptions.py  _types.py  cvintegrator.py  functions.py  mccv.py  utilities.py
src/covvvr/: __init__.py  _cvitime.py  _wrappers.py  cvintegrator.py  functions.py
