[build-system]
requires = ["setuptools", "setuptools.scm"]
build-backend = "setuptools.build_meta"

[project]
name = "control-vegas"
version = "1.1.0"
description = "A Control Variate wrapper over the vegas python package."
authors = [
    {name = "Jacob Scott", email = "jscott137@pm.me"}
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "numpy>=1.24",
    "vegas>=5.4",
    "nptyping>=2.5"
]
keywords = ["Monte Carlo", "vegas", "control variates", "integration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "black",
    "isort",
    "jupyterlab",
    "jupyterlab_code_formatter"
]

[project.urls]
Github = "https://github.com/crumpstrr33/control-vegas"
