[build-system]
requires = ["setuptools", "setuptools.scm"]
build-backend = "setuptools.build_meta"

[project]
name = "covvvr"
version = "1.4.1"
description = "COntrol Variate & Vegas Variance Reduction package for Monte Carlo integration."
authors = [
    {name = "Jacob Scott", email = "jscott137@pm.me"}
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "numpy<1.24, >=1.22",
    "vegas>=5.4",
    "nptyping>=2.5"
]
keywords = ["Monte Carlo", "vegas", "control variates", "integration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "black",
    "isort",
]

[project.urls]
Github = "https://github.com/crumpstrr33/covvvr"
